# frontend

./: Cargo.toml
assets/css/: Specie Bootstrap 5 Admin Template.csv  Specie Bootstrap 5 Admin Template.xlsx  bootstrap-editable.css  font-awesome.css  ionicons.css  materialdesignicons.css  simple-line-icons.css  style3.css  vendors_css.css  weather-icons.min.css
assets/js/: amcharts.js  auth.js  auth2.js  auth3.js  auth4.js  auth5.js  auth6.js  auth7.js  chat-popup.js  connect.js  connect10.js  connect12.js  connect13.js  connect14.js  connect15.js  connect16.js  connect17.js  connect18.js  connect19.js  connect2.js  connect20.js  connect21.js  connect22.js  connect24.js  connect25.js  connect26.js  connect27.js  connect28.js  connect29.js  connect3.js  connect30.js  connect31.js  connect32.js  connect4.js  connect7.js  connect8.js  connect9.js  dashboard2.js  export.min.js  main.js  (+5 more)
src/: main.rs  routes.rs
src/utils/: auth.rs  mod.rs  reqwest.rs
src/views/: admin_pages.rs  auth_pages.rs  mod.rs  pages.rs  user_pages.rs
static/scripts/: main.js
static/styles/: style.css
templates/: about.stpl  anon_faq.stpl  anon_footer.stpl  anon_header.stpl  anon_left_panel.stpl  anon_navbar.stpl  anon_policy.stpl  anon_terms.stpl  faq.stpl  footer.stpl  for_lawyers.stpl  for_mediatiors.stpl  get_started.stpl  header.stpl  home_accordion.stpl  index.stpl  info.stpl  left_panel.stpl  mainpage.stpl  navbar.stpl  not_found.stpl  policy.stpl  price.stpl  terms.stpl  testimonials.stpl
templates/admin/: admins.stpl  anon_holders.stpl  banned_admins.stpl  banned_users.stpl  create_suggest_item.stpl  exchange.stpl  gainers_losers.stpl  get_approved_applications.stpl  get_new_applications.stpl  get_rejected_applications.stpl  holders.stpl  ico_details.stpl  ico_distribution_countdown.stpl  ico_filter.stpl  ico_listing.stpl  ico_progress.stpl  ico_roadmap_timeline.stpl  index.stpl  index2.stpl  invoice.stpl  invoices_list.stpl  logs.stpl  market.stpl  members_list.stpl  profile.stpl  setting.stpl  stats.stpl  suggest_items.stpl  support.stpl  tickers_live_pricing.stpl  transaction_counter.stpl  transaction_details.stpl  transaction_search.stpl  transactions.stpl  transactions_counter.stpl  transactions_tables.stpl  user_logs.stpl  (+2 more)
(+8 files in other folders)
