[package]
name = "dach_front"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0.1"
actix-files = "0.6"
log = "0.4.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
actix-session = { version = "0.7.1", features = ["cookie-session"] }
actix-multipart = "0.4.0-beta.12" 
futures = "0.3.5"
actix-form-data = "0.6.2"
reqwest = { version = "0.11.10", features = ["json"] }
derive_more = "0.99.5"

sailfish = "0.4.0" 
sailfish-macros = "0.4.0"

