[package]
name = "dach_front"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0.1"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
diesel = { version = "1.4.4", features = ["chrono", "postgres", "r2d2", "uuidv07", "serde_json"] }
chrono = { version = "0.4", features = ["serde"] }
actix-session = { version = "0.7.1", features = ["cookie-session"] }
actix-multipart = "0.4.0-beta.12" 
futures = "0.3.5"
actix-form-data = "0.6.2"
reqwest = "*"
derive_more = "0.99.5"
futures-util = "0.3.5" 
sailfish = "0.4.0"
sailfish-macros = "0.4.0"

[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

